<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.triageapplication.NewVitals" >

    <TextView
        android:id="@+id/new_vitals_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_vitals_instructions" />

    <Button
        android:id="@+id/submit_new_vitals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back_to_vitals_from_new_vitals"
        android:layout_alignLeft="@+id/diastolic_blood_pressure"
        android:layout_marginBottom="46dp"
        android:onClick="submit"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/diastolic_blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_vitals_instructions"
        android:layout_below="@+id/new_vitals_instructions"
        android:ems="10"
        android:hint="@string/diastolic_blood_pressure"
        android:inputType="number" />

    <EditText
        android:id="@+id/systolic_blood_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diastolic_blood_pressure"
        android:layout_below="@+id/diastolic_blood_pressure"
        android:ems="10"
        android:hint="@string/systolic_blood_pressure"
        android:inputType="number" >
    </EditText>

    <Button
        android:id="@+id/back_to_vitals_from_new_vitals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submit_new_vitals"
        android:layout_below="@+id/systolic_blood_pressure"
        android:layout_marginTop="122dp"
        android:onClick="cancel_new_visit_record_button"
        android:text="@string/cancel_new_visit_record_button" />

    <EditText
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/systolic_blood_pressure"
        android:layout_below="@+id/systolic_blood_pressure"
        android:ems="10"
        android:hint="@string/temperature"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/heart_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/temperature"
        android:layout_below="@+id/temperature"
        android:ems="10"
        android:hint="@string/heart_rate"
        android:inputType="number" />

    <TextView
        android:id="@+id/invalid_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/back_to_vitals_from_new_vitals"
        android:layout_below="@+id/submit_new_vitals"
        android:text="" />

</RelativeLayout>