<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.triageapplication.NewPatientActivity" >

    <TextView
        android:id="@+id/patient_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patient_name_title" />
    <EditText
        android:id="@+id/patient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_name_title"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/health_card_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/patient_name"
        android:text="@string/health_card_number_title" />
    <EditText
        android:id="@+id/health_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/health_card_number_title"
        android:ems="10"
        android:inputType="number" >
    </EditText>

    
<Button
        android:id="@+id/set_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/health_card_number"
        android:layout_marginRight="15dp"
        android:onClick="setDob"
        android:text="@string/new_patient_set_dob" />

<TextView
        android:id="@+id/dob_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/health_card_number"
        android:layout_alignTop="@+id/set_dob"
        android:layout_marginTop="14dp"
        android:text="@string/dob_title" />
<TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dob_title"
        android:text="None"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dob"
        android:text="@string/new_patient_create"
        android:onClick="save"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/save"
        android:onClick="cancel"
        android:text="@string/cancel" />
    
</RelativeLayout>
