<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.triageapplication.PatientActivity" >

    <TextView
        android:id="@+id/patient_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/patient_name_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/patient_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_name_title"
        android:layout_below="@+id/patient_name_title"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/health_card_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/patient_information"
        android:layout_below="@+id/patient_information"
        android:text="@string/health_card_number_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/health_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/health_card_number_title"
        android:layout_below="@+id/health_card_number_title"
        android:text="TextView" />

    <TextView
        android:id="@+id/dob_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/health_card_number"
        android:layout_below="@+id/health_card_number"
        android:text="@string/dob_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dob_title"
        android:layout_alignRight="@+id/health_card_number_title"
        android:layout_below="@+id/dob_title"
        android:text="TextView" />

    <Button
        android:id="@+id/view_visit_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dob"
        android:layout_below="@+id/dob"
        android:text="@string/view_visit_records_title_button"
        android:onClick="viewVisitRecords" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_visit_records"
        android:layout_below="@+id/view_visit_records"
        android:onClick="back"
        android:text="@string/back" />

    <Button
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/back"
        android:layout_below="@+id/back"
        android:text="@string/save_changes"
        android:onClick="save" />

    <TextView
        android:id="@+id/save_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/save_changes"
        android:layout_alignRight="@+id/view_visit_records"
        android:layout_below="@+id/save_changes"
        android:singleLine="true"
        android:text="" />

</RelativeLayout>
